added all components from old project

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,12 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/components/*": ["src/components/*"],
+      "@/layout/*": ["src/layout/*"],
+      "@/tab/*": ["src/tabs/*"],
+      "@/blocks/*": ["src/blocks/*"],
+      "@/images/*": ["public/images/*"]
     }
   }
 }
