--- a/package.json
+++ b/package.json
@@ -6,12 +6,42 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint --ext .js,.jsx src --fix",
+    "serve": "next-i18next serve"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "formik": "^2.4.6",
+    "i18next": "^23.8.2",
+    "next": "14.1.0",
+    "next-i18next": "^15.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.11"
+    "react-intersection-observer": "^9.13.0",
+    "react-phone-input-2": "^2.15.1",
+    "uuidv4": "^6.2.13",
+    "yup": "^1.4.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "cheerio": "^1.0.0-rc.12",
+    "date-fns": "^3.6.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
+    "moment": "^2.30.1",
+    "react-helmet-async": "^2.0.5",
+    "react-i18next": "^14.1.3",
+    "react-image-gallery": "^1.3.0",
+    "react-paginate": "^8.2.0",
+    "react-redux": "^9.1.1",
+    "react-responsive": "^10.0.0",
+    "react-router-dom": "^6.22.3",
+    "react-scripts": "^5.0.1",
+    "redux": "^5.0.1",
+    "sitemap": "^8.0.0",
+    "web-vitals": "^2.1.4",
+    "workbox-build": "^7.1.1",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "eslint": "^8",
