--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-responsive": "^10.0.0",
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
+    "sharp": "^0.33.5",
     "sitemap": "^8.0.0",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4",
