--- a/package.json
+++ b/package.json
@@ -14,34 +14,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
-    "cheerio": "^1.0.0-rc.12",
     "date-fns": "^3.6.0",
-    "formik": "^2.4.6",
     "i18next": "^23.8.2",
-    "i18next-browser-languagedetector": "^8.0.0",
-    "i18next-http-backend": "^2.5.2",
     "moment": "^2.30.1",
     "next": "^14.2.11",
     "next-i18next": "^15.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.0.2",
     "react-image-gallery": "^1.3.0",
     "react-intersection-observer": "^9.13.0",
     "react-paginate": "^8.2.0",
     "react-phone-input-2": "^2.15.1",
-    "react-redux": "^9.1.1",
-    "react-responsive": "^10.0.0",
     "react-scripts": "^5.0.1",
-    "redux": "^5.0.1",
-    "sharp": "^0.33.5",
-    "sitemap": "^8.0.0",
-    "uuidv4": "^6.2.13",
-    "web-vitals": "^2.1.4",
-    "workbox-build": "^7.1.1",
-    "ws": "^8.18.0",
-    "yup": "^1.4.0"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "eslint": "^8",
