--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-paginate": "^8.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-scripts": "^5.0.1",
+    "sharp": "^0.33.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
