--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "postbuild": "next-sitemap",
     "build": "next build",
     "start": "next start",
     "lint": "eslint --ext .js,.jsx src --fix",
@@ -19,6 +20,7 @@
     "moment": "^2.30.1",
     "next": "^14.2.11",
     "next-i18next": "^15.2.0",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^15.0.2",
